# fxview

./: .clang-format  .gitignore  CMakeLists.txt  bin2cpp.py  pre_build_step.py
resources/shaders/: basic_fs.glsl  basic_vs.glsl
src/: main.cpp  notes.txt
src/base/: fast_delegate.hpp  file_io.cpp  file_io.hpp  frame_time.cpp  frame_time.hpp  my_glm.hpp  static_pow.hpp  task_runner.cpp  task_runner.hpp  vec.hpp
src/graphics/: bezier.hpp  bezier_patch.hpp  bezier_render.hpp  check_opengl_error.hpp  heightmap.cpp  heightmap.hpp  marching_cubes.hpp  mesh.cpp  mesh.hpp  mesh_gen.cpp  mesh_gen.hpp  render.cpp  render.hpp  shader.cpp  shader.hpp  shape_gen.cpp  shape_gen.hpp  window.cpp  window.hpp
src/graphics/shaders/: basic_fs.glsl  basic_fs.hpp  basic_vs.glsl  basic_vs.hpp
src/graphics/shaders/glsl/: basic_fs.glsl
src/input/: GamepadInput.cpp  GamepadInput.hpp  event_handler.cpp  event_handler.hpp  gamepad_device.cpp  gamepad_device.hpp
src/physics/: rk4_integrator.hpp  verlet_integrator.hpp
src/spatial/: quad_tree.hpp  shapes.hpp
src/spatial2d/: quad_tree.hpp  shapes.hpp
tests/: quad_tree.cpp  shapes.cpp
